[tool.poetry]
name = "ska-pst-testutils"
version = "0.1.0"
description = "Utilities library used for testing SKA PST"
authors = ["Team PST"]
license = "BSD-3-Clause"
repository = "https://gitlab.com/ska-telescope/pst/ska-pst-testutils.git"

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[tool.poetry.dependencies]
python = "~3.10"
numpy = "*"
pytango = "9.4.2"
ska-tango-testing = "^0.6.1"
jinja2 = "^3.1.2"
backoff = "^2.2.1"
readerwriterlock = "^1.0.9"
astropy = "^5.2.2"
ska-tango-base = "^0.17.0"
nptyping = "^2.5.0"
matplotlib = "^3.7.0"
ska-telmodel = "^1.8.1"
watchdog = "*"
pandas = "*"
h5py = "*"

[tool.poetry.group.dev.dependencies]
black = "^22.1.0"
mypy = "^1.2.0"
pylint = "^2.8.3"
pytest = "^7.1.2"
pytest-bdd = "^5.0.0"
pytest-cov = "^3.0.0"
pytest-forked = "^1.3.0"
pytest-json-report = "^1.4.0"
pylint-junit = "^0.3.2"
pytest-metadata = "^1.11.0"
pytest-mock = "^3.6.1"
pytest-pycodestyle = "^2.2.0"
pytest-pydocstyle = "^2.2.0"
pytest-pylint = "^0.19.0"
pytest-runner = "^6.0.0"
isort = "^5.9.1"
flake8 = "^4.0.1"
flake8-black = "^0.3.2"
flake8-docstrings = "^1.6.0"
flake8-formatter-junit-xml = "^0.0.6"
flake8-rst-docstrings = "^0.3.0"
coverage = "^6.3.2"
mock = "^4.0.0"
autoflake = "^1.4"
ipython = "^8.14.0"
pandas-stubs = "*"


[tool.poetry.group.docs.dependencies]
docutils = "<0.18"
sphinx = "5.1.1"
sphinx-autodoc-typehints = "^1.19.0"
sphinx-rtd-theme = "^1.2.2"
sphinxcontrib-plantuml = "^0.25"
transitions = "^0.9.0"
typing-extensions = "^4.7.0"
recommonmark = "^0.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
analyse_bandpass = "ska_pst_testutils.analysis.analyse_bandpass:main"
