[metadata]
description-file = README.md

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = src

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs/src
build-dir = docs/_build
all_files = 1
builder = html

[flake8]
max-line-length = 100

# For flake8-rst-docstrings
rst-directives = literalinclude
rst-roles = py:attr, py:class, py:const, py:data, py:exc, py:func, py:meth, py:mod

# For darglint
docstring_style=sphinx

# E203 and W503 conflict with black.
ignore =
    E203,
    W503

# Missing docstrings: D100, D101, D102, D103, D104, D105, D107,
# Docstring PEP-257 issues: D205, D400, D401, D403,
# Missing sphinx parameters: DAR101, DAR201, DAR301, DAR401
per-file-ignores =
#   $PATH/$FILE: $CODE
#   test/test_example.py: D100
